--- a/.github/workflows/ejercicio_ci.yml
+++ b/.github/workflows/ejercicio_ci.yml
@@ -5,9 +5,18 @@ on:
     branches: [config/ci]
 
 jobs:
+  outdated_dependencies:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          
   pytest:
     runs-on: ubuntu-latest
-
+    
     services:
       mysql:
         image: mysql:5.7
@@ -25,16 +34,16 @@ jobs:
 
     - uses: actions/setup-python@v5
       with:
-        python-version: '3.12'
+        python-version: '3.11'
 
     - name: Prepare environment
       run: |
         sed -i '/rosemary @ file:\/\/\/app/d' requirements.txt
 
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
     - name: Run Tests
       env:
