--- a/.github/workflows/ejercicio_ci.yml
+++ b/.github/workflows/ejercicio_ci.yml
@@ -2,7 +2,8 @@ name: Run tests
 
 on:
   push:
-    branches: [config/ci]
+    branches: 
+      - config/ci
 
 jobs:
   outdated_dependencies:
@@ -13,7 +14,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          
+
   pytest:
     runs-on: ubuntu-latest
     
