--- a/.github/workflows/ejercicio_ci.yml
+++ b/.github/workflows/ejercicio_ci.yml
@@ -17,10 +17,13 @@ jobs:
 
   pytest:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        image-version: [mysql:5.7, mysql:8.0]
     
     services:
       mysql:
-        image: mysql:5.7
+        image: ${{ matrix.image-version }}
         env:
           MYSQL_ROOT_PASSWORD: uvlhub_root_password
           MYSQL_DATABASE: uvlhubdb_test
